force/src/objects/Article_Feedback__c.object
<CustomObject>
    <description>Container for user feedback</description>
    <fields>
        <fullName>Article_ID__c</fullName>
        <description>Populate with KnowledgeArticle.ID</description>
        <label>Article ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Article_Link__c</fullName>
        <formula>HYPERLINK(&quot;/&quot;&amp;Article_ID__c, Article_Title__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Article Link</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Article_Title__c</fullName>
        <label>Article Title</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Article_Type__c</fullName>
        <label>Article Type</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Article_URL__c</fullName>
        <label>Article URL</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <label>Comments</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Data_Category_Group__c</fullName>
        <label>Data Category Group</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Data_Category__c</fullName>
        <label>Data Category</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reason__c</fullName>
        <label>Reason</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Broken Link</fullName>
                </value>
                <value>
                    <fullName>Page Unclear</fullName>
                </value>
                <value>
                    <fullName>Missing Information</fullName>
                </value>
                <value>
                    <fullName>Hard to Find Page</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>New</fullName>
                    <default>true</default>
                    <label>New</label>
                </value>
                <value>
                    <fullName>In Progress</fullName>
                </value>
                <value>
                    <fullName>Closed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Article Feedback</label>
    <listViews>
        <fullName>All_Last_30_Days</fullName>
        <columns>NAME</columns>
        <columns>Status__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>Article_Link__c</columns>
        <columns>Comments__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>Data_Category__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>All Last 30 Days</label>
    </listViews>
    <listViews>
        <fullName>All_News_in_Last_365_Days</fullName>
        <columns>Status__c</columns>
        <columns>NAME</columns>
        <columns>CREATED_DATE</columns>
        <columns>Article_Link__c</columns>
        <columns>Comments__c</columns>
        <columns>Reason__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>Data_Category__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATED_DATE</field>
            <operation>equals</operation>
            <value>LAST_N_DAYS:365</value>
        </filters>
        <label>All News in Last 365 Days</label>
    </listViews>
    <listViews>
        <fullName>All_Today</fullName>
        <columns>NAME</columns>
        <columns>CREATED_DATE</columns>
        <columns>Article_Link__c</columns>
        <columns>Comments__c</columns>
        <columns>Reason__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>Data_Category__c</columns>
        <columns>Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATED_DATE</field>
            <operation>equals</operation>
            <value>TODAY</value>
        </filters>
        <label>All Today</label>
    </listViews>
    <listViews>
        <fullName>Benefits_Feedback_Last_30_Days</fullName>
        <columns>NAME</columns>
        <columns>Article_Link__c</columns>
        <columns>Comments__c</columns>
        <columns>Reason__c</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Data_Category__c</field>
            <operation>equals</operation>
            <value>Benefits,Additional_Benefits,Core_Benefits,Benefits_Related</value>
        </filters>
        <filters>
            <field>CREATED_DATE</field>
            <operation>greaterOrEqual</operation>
            <value>LAST_N_DAYS:30</value>
        </filters>
        <label>Benefits Feedback - Last 30 Days</label>
    </listViews>
    <listViews>
        <fullName>Claims_Feedback_Last_30_Days</fullName>
        <columns>NAME</columns>
        <columns>Article_Link__c</columns>
        <columns>Comments__c</columns>
        <columns>Reason__c</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Data_Category__c</field>
            <operation>equals</operation>
            <value>Claims,Adjustments,Authorization,COB,Determine_Payment,Submitting,Claims_Related</value>
        </filters>
        <filters>
            <field>CREATED_DATE</field>
            <operation>greaterOrEqual</operation>
            <value>LAST_N_DAYS:30</value>
        </filters>
        <label>Claims Feedback - Last 30 Days</label>
    </listViews>
    <listViews>
        <fullName>Client_Exception_Feedback_Last_30_Days</fullName>
        <booleanFilter>(1 OR 2) AND 3</booleanFilter>
        <columns>NAME</columns>
        <columns>Article_Link__c</columns>
        <columns>Comments__c</columns>
        <columns>Reason__c</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Data_Category__c</field>
            <operation>equals</operation>
            <value>Client_Exception,Client_Benefits_Claims,Client_Enrollment</value>
        </filters>
        <filters>
            <field>Data_Category__c</field>
            <operation>equals</operation>
            <value>Client_Exceptions_Related</value>
        </filters>
        <filters>
            <field>CREATED_DATE</field>
            <operation>greaterOrEqual</operation>
            <value>LAST_N_DAYS:30</value>
        </filters>
        <label>Client Exception Feedback - Last 30 Days</label>
    </listViews>
    <listViews>
        <fullName>Eligibility_Feedback_Last_30_Days</fullName>
        <columns>NAME</columns>
        <columns>Article_Link__c</columns>
        <columns>Comments__c</columns>
        <columns>Reason__c</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Data_Category__c</field>
            <operation>equals</operation>
            <value>Eligibility,Coverage_Status,Service_Status,Eligibility_Related</value>
        </filters>
        <filters>
            <field>CREATED_DATE</field>
            <operation>greaterOrEqual</operation>
            <value>LAST_N_DAYS:30</value>
        </filters>
        <label>Eligibility Feedback - Last 30 Days</label>
    </listViews>
    <listViews>
        <fullName>Misc_Feedback_Last_30_Days</fullName>
        <columns>NAME</columns>
        <columns>Article_Link__c</columns>
        <columns>Comments__c</columns>
        <columns>Reason__c</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Data_Category__c</field>
            <operation>equals</operation>
            <value>Miscellaneous,Complaints,Confidentiality,Letters,Phone_Book</value>
        </filters>
        <filters>
            <field>CREATED_DATE</field>
            <operation>greaterOrEqual</operation>
            <value>LAST_N_DAYS:30</value>
        </filters>
        <label>Misc. Feedback - Last 30 Days</label>
    </listViews>
    <listViews>
        <fullName>Network_Feedback_Last_30_Days</fullName>
        <columns>NAME</columns>
        <columns>Article_Link__c</columns>
        <columns>Comments__c</columns>
        <columns>Reason__c</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Data_Category__c</field>
            <operation>equals</operation>
            <value>Network,Practice_Information,Doctor_Payment,Network_Related</value>
        </filters>
        <filters>
            <field>CREATED_DATE</field>
            <operation>greaterOrEqual</operation>
            <value>LAST_N_DAYS:30</value>
        </filters>
        <label>Network Feedback - Last 30 Days</label>
    </listViews>
    <nameField>
        <displayFormat>Feedback-{000}</displayFormat>
        <label>Article Feedback ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Article Feedback</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>